@@ -2,6 +2,12 @@
 
 	* device/include/mcs51/compiler.h:
 	  Update for SDCC -> __SDCC rename.
+	* support/regression/tests/gcc-torture-execute-pr49161.c,
+	  support/regression/tests/gcc-torture-execute-pr49039.c,
+	  support/regression/tests/gcc-torture-execute-pr48809.c,
+	  support/regression/tests/gcc-torture-execute-pr48973-1.c,
+	  support/regression/tests/gcc-torture-execute-pr48973-2.c:
+	  Disable tests for all gcc older than 5.0.
 
 2012-02-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
